[package]
name = "bitcoin-script-stack"
description = "Bitcoin script stack tracking tool and deubgger"
version = "0.0.2"
edition = "2021"
authors = ["Martin Jonas <martinjonas@gmail.com>"]
repository = "https://github.com/FairgateLabs/rust-bitcoin-script-stack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script", branch = "bitvmx"}
bitcoin = "0.32.1"
bitcoin-scriptexec = { git = "https://github.com/FairgateLabs/rust-bitcoin-scriptexec/", branch = "bitvmx" }
bitcoin-opcode-utils = { git = "https://github.com/FairgateLabs/rust-bitcoin-opcode-utils/" }

crossterm = { version = "0.27.0", optional = true}
hex = "0.4.3"

[features]
interactive = ["crossterm"]
